# obographs

./: Cargo.toml  README.md  fun
.github/workflows/: ci.yml
benches/: load.rs
src/: io.rs  lib.rs  model.rs
tests/: test_io.rs
tests/test_data/: README.md  hp.mini.json
