[package]
name = "obographs-dev"
version = "0.2.1-dev0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", features = ["derive"], optional = true}
serde_json = {version = "1.0.81", optional = true }
anyhow = {version = "1.0", optional = true}

[features]
serde = ["dep:serde", "dep:serde_json", "dep:anyhow"]

[dev-dependencies]
criterion = "0.5.1"
reqwest = {version = "0.11.22", features = ["blocking"]}

[[bench]]
name = "load"
harness = false
