[package]
name = "obographs-dev"
version = "0.2.3-dev0"
description = "Load Obographs data files."
keywords = ["Obographs", "ontology", "bioinformatics"]
edition = "2021"

homepage = "https://github.com/ielis/obographs-dev"
repository = "https://github.com/ielis/obographs-dev"
readme = "README.md"
license-file = "LICENSE"

authors = ["Daniel Danis <daniel.gordon.danis@protonmail.com>"]

[dependencies]
serde = {version = "1.0.188", features = ["derive"], optional = true}
serde_json = {version = "1.0.81", optional = true }
anyhow = {version = "1.0", optional = true}

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "dep:anyhow"]

[dev-dependencies]
criterion = "0.5.1"
reqwest = {version = "0.11.22", features = ["blocking"]}

[[bench]]
name = "load"
harness = false
